// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration, game play dispatches score in round 2 after time runs out: summary 1`] = `
<table
  class="MuiTable-root mui-style-1puexzi-MuiTable-root"
>
  <thead
    class="MuiTableHead-root mui-style-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head mui-style-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall mui-style-gvmp1b-MuiTableCell-root"
        scope="col"
      >
        Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Distance
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Score
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root mui-style-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root mui-style-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall mui-style-13rbi0f-MuiTableCell-root"
        scope="row"
      >
        Player 1
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-d5rns7-MuiTableCell-root"
      >
        -
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-d5rns7-MuiTableCell-root"
      >
        0
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Integration, game play displays final game summary: summary 1`] = `
<table
  aria-label="result-table"
  class="MuiTable-root mui-style-1puexzi-MuiTable-root"
>
  <thead
    class="MuiTableHead-root mui-style-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head mui-style-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall mui-style-gvmp1b-MuiTableCell-root"
        scope="col"
      >
        Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Total Score
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root mui-style-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root mui-style-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall mui-style-13rbi0f-MuiTableCell-root"
        scope="row"
      >
        Player 1
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-d5rns7-MuiTableCell-root"
      >
        64
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Integration, game play displays round 1 summary: info table 1`] = `
[
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding mui-style-13v49lt-MuiListItem-root"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline mui-style-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary mui-style-126dpoc-MuiTypography-root"
      >
        Panorama description
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary mui-style-14laof0-MuiTypography-root"
      >
        Fake panorama description
      </p>
    </div>
  </li>,
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding mui-style-13v49lt-MuiListItem-root"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline mui-style-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary mui-style-126dpoc-MuiTypography-root"
      >
        Coordinates (lat/lng)
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary mui-style-14laof0-MuiTypography-root"
      >
        0, 
            0
      </p>
    </div>
  </li>,
]
`;

exports[`Integration, game play displays round 1 summary: summary screen 1`] = `
<table
  class="MuiTable-root mui-style-1puexzi-MuiTable-root"
>
  <thead
    class="MuiTableHead-root mui-style-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head mui-style-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall mui-style-gvmp1b-MuiTableCell-root"
        scope="col"
      >
        Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Distance
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Score
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root mui-style-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root mui-style-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall mui-style-13rbi0f-MuiTableCell-root"
        scope="row"
      >
        Player 1
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-d5rns7-MuiTableCell-root"
      >
        157.25 km
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall mui-style-d5rns7-MuiTableCell-root"
      >
        64
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Integration, game play searches panorama and does not find one first: intermission screen 1`] = `
[
  <h4
    class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter mui-style-149xwtl-MuiTypography-root"
  >
    Player 1
    , it's your turn!
  </h4>,
  <h6
    class="MuiTypography-root MuiTypography-h6 mui-style-13nzsfx-MuiTypography-root"
  >
    Round 
    1
    /
    2
  </h6>,
]
`;
